--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,9 @@ $fontColor2: #474747;
 //  font-family: 'Baloo 2', sans-serif;
   font-family: 'Baloo Bhaina 2', sans-serif;
   line-height: 125%;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .page {
@@ -57,13 +60,18 @@ a {
   top: 0;
   left: 0;
   display: block;
-
 }
 
 .navbar {
-  background-image: linear-gradient(to right, $main-color, $color2);
+//  background-color: linear-gradient(to right, $main-color, $color2);
   color: white;
   transition: color .1s, background-image .2s, background-color .2s;
+}
+
+@media only screen and (max-width: 650px) {
+  .navbar {
+    background: linear-gradient(to right, $main-color, $color2);
+  }
 }
 
 .navbar-scroll {
@@ -199,6 +207,45 @@ a {
   align-items: center;
 }
 
+.title-fade {
+  opacity: 0;
+  $title-fade-duration: fadein 2s forwards;
+  -webkit-animation: $title-fade-duration;
+  -moz-animation: $title-fade-duration;
+  -ms-animation: $title-fade-duration;
+  animation: $title-fade-duration;
+}
+
+.title-fade2 {
+  opacity: 0;
+  $title-fade2-duration: fadein 1s 1s forwards;
+
+  -webkit-animation: $title-fade2-duration;
+  -moz-animation: $title-fade2-duration;
+  -ms-animation: $title-fade2-duration;
+  animation: $title-fade2-duration;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+  }
+
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+  
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
 //My Background
 .dot-container {
   display: flex;
@@ -299,6 +346,8 @@ a {
 
 .description-link-wrapper {
   display: flex;
+  width: 60%;
+  margin-right: auto;
 }
 
 .description-link {
@@ -358,7 +407,8 @@ a {
   }
   .description-link-wrapper {
     display: flex;
-    justify-content: space-around;
+    margin-right: auto;
+    margin-left: auto;
   }
 
 }
@@ -503,35 +553,13 @@ a {
 #contact {
   height: 100%;
   width: 100%;
+  display: inline-block;
+//  background-color: $background-color2;
+  background-image: url("../src/Assets/bg_contact.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 0;
 }
-
-.bg-layer {
-  position: absolute;
-  height: 55%;
-  width: 100%;
-  z-index: -5;
-  background-color: $background-color2;
-
-}
-
-.contact-bg-wrapper {
-  width: 100%;
-  height: 55%;
-  position: absolute;
-  z-index: -1;
-  margin-bottom: -400px;
-}
-
-.contact-bg {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  left: 0;
-  bottom: 0;
-  z-index: 1;
-  margin-bottom: -400px;
-}
-
 
 .contact-form {
   width: 100%;
@@ -539,8 +567,9 @@ a {
 }
 
 .contact-el {
-  width: 100%;
-  min-width: 400px;
+  width: 90%;
+  min-width: 200px;
+  max-width: 500px;
   margin-bottom: 10px;
   padding: 10px;
   border-radius: 2px;
@@ -558,7 +587,6 @@ textarea {
   height: 80px;
   resize: none;
   font-family: 'Roboto', sans-serif;
-
 
   ::placeholder {
     font-family: 'Roboto', sans-serif
@@ -583,62 +611,20 @@ textarea {
   }
 }
 
-/*
-.contact-content-wrapper {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.contact-content {
-  display: flex;
-  font-size: 18px;
-  margin: 5px;
-  min-width: 220px;
-}
-
-.contact-email {
-  font-weight: 700;
-}
-
-.contact-info {
-  padding-left: 2px; 
-}
-
-.contact-number {
-  font-size: 14px;
-  padding: 2px 2px 2px 2px;
-  width: 140px;
-  position: absolute;
-  z-index: 9;
-  padding-left: 6px;
-  filter: blur(3px);
-  transition: filter .2s ease-in;
-
-  &:hover {
-    filter: blur(0);
-    transition: filter .2s ease-in;
-
-  }
-}
-*/
-
 //Footer 
 #footer {
   width: 100%;
-  background-color: $main-color; 
-  background-image: linear-gradient(to right, $main-color, $color2); 
   color: white;
+  margin-top: 25px;
   padding-top: 15px;
   padding-bottom: 15px;
+  box-shadow: 0 0 10px white;
 }
 
 .footer-links {
   display: flex;
   justify-content: space-around;
-  width: 300px;
+  max-width: 300px;
   margin-left: auto;
   margin-right:auto;
 }
@@ -668,123 +654,19 @@ textarea {
   }
 }
 
-
-
 .copyright{
   text-align: center;
   margin-top: 10px;
 }
 
-
-//Other Skills 
-#other-skills {
-  background-color: $background-color2;
-  text-align: center;
-}
-
-.skills-container {
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-
-}
-
-.skill-box {
-  display: inline-block;
-  border: 1px solid gray;
-  border-radius: 10px;
-  text-align: center;
-  background: transparent;
-  width: 300px;
-  height: 250px;
-  margin-left: 20%;
-  margin-right: 20%;
-  margin-bottom: 20px;
-  z-index: 2;
-}
-
-.skill-title {
-  background: linear-gradient(to right, $main-color, $color2);
-  border-radius: 8px 8px 0px 0px;
-  padding: 5px 0px 5px 0px;
-  color: white;
-  font-weight: 600;
-  height: 25px;
-  position: relative;
-  left: 0px;
-  top: 0px;
-  z-index: 0;
-}
-
-.skills {
-  text-align: left;
-  font-size: 14px;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  padding-left: 5px;
-}
-
-li {
-  padding-top: 7px;
-}
-
-
-
-.skills-experience {
-  transform: rotate(270deg);
-  color: $main-color;
-  font-size: 18px;
-  font-weight: 700;
-}
-
-
-.skills-bar {
-  height: 140px;
-  width: 2px;
-  background: linear-gradient(to right, $main-color, $color2);
-  position: relative;
-  left: 40px;
-}
-
-.skills-logo-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-}
-
-.skills-logo {
-  max-height: 20px;
-  max-width: 60px;
-  filter: brightness(0);
-}
-
-
-
-button {
-  border-radius: 10px;
-  border: 2px solid $main-color;
-  background-color: white;
-  height: 40px;
-  width: 100px;
-
-  &:hover {
-    background-color: $main-color;
-    cursor: pointer;
-
-    .skills-logo {
-      filter: brightness(0) invert(1);
-    }
+@media screen and (max-width: 900px) {
+  //Contact
+  #contact {
+    background-image: url("../src/Assets/bg_contact_tablet.png");
   }
 }
 
-
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 450px) {
   //Projects 
   .project-description {
     font-size: 14px;
@@ -799,22 +681,10 @@ button {
     width: 100%;
   }
 
-  //Certifications
-  .certification-button {
-    font-size: 14px;
-    width: 280px;
-  }
 
-  .content {
-    font-size: 12px;
-  }
-
-  .google-certification {
-    font-size: 12px;
-  }
-  
-  .google-certification-description {
-    width: 220px;
+  //Contact
+  #contact {
+    background-image: url("../src/Assets/bg_contact_mobile.png");
   }
 
   //Footer
@@ -824,6 +694,7 @@ button {
   }
 }
 
+//background-image: url("../src/Assets/bg_contact.png");
 
   
 //transition 
