--- a/src/App.scss
+++ b/src/App.scss
@@ -415,6 +415,8 @@ a {
 .bar {
   width: 100%;
   height: 2px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   background-color: #dbdbdb;
 }
 
@@ -482,6 +484,7 @@ a {
   opacity: 0;
   transform: translateY(10px);
   transition: opacity .2s, transform .3s;
+  user-select: none;
 }
 
 .skill-icon-container {
@@ -869,7 +872,7 @@ textarea {
 //transition 
 .fade-in {
   opacity: 0;
-  transition: opacity 1s;
+  transition: opacity .5s;
 }
 
 .fade-in.appear {
@@ -878,7 +881,7 @@ textarea {
 
 .fade-in-slow {
   opacity: 0;
-  transition: opacity 2s;
+  transition: opacity 1s;
 }
 
 .fade-in-slow.appear {
