--- a/src/App.scss
+++ b/src/App.scss
@@ -74,16 +74,16 @@ section {
     position: absolute;
     top: 0px;
     bottom: 0px;
-    height: 300px;
+    height: 250px;
     left: 0px;
     right: 0px;
     width: fit-content;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     margin: auto auto;
-    opacity: .95 !important;
+    opacity: .9 !important;
     z-index: 150;
   }
 
@@ -91,31 +91,27 @@ section {
     position: absolute;
     top: 0px;
     bottom: 0px;
-    height: 300px;
+    height: 250px;
     left: 0px;
     right: 0px;
     width: fit-content;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    // justify-content: flex-start;
     margin: auto auto;
-    z-index: 1;
+    z-index: 0;
 
     .header_title {
       color: rgb(25, 0, 255);
       font-size: 50px;
       font-weight: 900;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;  
     }
   
     .header_sub-title {
       color: rgb(25, 0, 255);
       font-size: 20px;
       font-weight: 900;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
     }
   }
 
@@ -123,8 +119,6 @@ section {
     color: white;
     font-size: 50px;
     font-weight: 900;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     text-shadow: 0px 0px 1px white;
   }
 
@@ -139,31 +133,15 @@ section {
   }
 }
 
-.blob-container {
-  position: relative;
-  z-index: 10;
-}
-
 .blob-wrapper {
   position: absolute;
-  left: -50vmax;
-  bottom: -20vmax;
-  height: 200vmax;
-  width: 200vmax;
-  margin: 0px auto;
+  // left: -50vmax;
+  // bottom: -20vmax;
+  // height: 200vmax;
+  // width: 200vmax;
   pointer-events: none;
   transition: opacity .5s;
-}
 
-.blob-wrapper2 {
-  position: absolute;
-  left: -50vmax;
-  bottom: -150vmax;
-  height: 200vmax;
-  width: 200vmax;
-  margin: 0px auto;
-  z-index: 0;
-  pointer-events: none;
 }
 
 
@@ -789,10 +767,13 @@ section {
 
 #contact {
   min-height: 100vh;
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
+  overflow: hidden;
   overflow: hidden;
 
   .contact-form {
@@ -946,6 +927,8 @@ section {
   }
 
   .header {
+    position: relative;
+
     .header_box {
       padding: 10px;
     }
@@ -956,7 +939,7 @@ section {
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: center
     }
 
     .header_title {
