--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@ $maxWidth: 1000px;
 $color-primary: #5568C3;
 $color-secondary: #27336F;
 $bg-light: #fcfcfc;
+$bg-med: #e9e9e9;
 $border-light: #ececec;
 $font-color: #2d2d2d;
 $font-subHeader: grey;
@@ -514,7 +515,7 @@ section {
 
 .skills {
   .btn-wrap {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     width: 100%;
@@ -527,8 +528,9 @@ section {
   }
 
   .category_container {
-    width: 100%;
+    // width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 20px 0px;
   }
@@ -536,6 +538,7 @@ section {
   .category_title {
     font-weight: 800;
     font-size: 1.2em;
+    padding: 10px 0px;
   }
 
   .categoryBtn {
@@ -562,13 +565,16 @@ section {
 
   .category_subWrapper {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
   }
 
   .category {
     display: flex;
     align-items: center;
-    margin: 10px 0px;
+    padding: 5px;
   
     .category_icon {
       height: 40px;
@@ -869,10 +875,6 @@ section {
       flex-wrap: wrap;
     }
 
-    .category-wrap {
-      padding-bottom: 20px;
-    }
-
     .category_subWrapper {
       flex-direction: row;
       flex-wrap: wrap;
@@ -880,7 +882,7 @@ section {
 
     .category {
       width: fit-content;
-      padding-right: 10px;
+      padding: 0px 10px 10px 0px;
 
       .category_icon {
         height: 25px;
