--- a/src/App.scss
+++ b/src/App.scss
@@ -192,6 +192,16 @@ section {
 .leftNav {
   pointer-events: auto;
 
+  .leftNav_bg {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    opacity: .25;
+    box-shadow: 0px 0px 5px $bg-light;
+    z-index: 5;
+  }
+
   .leftNav_headshot {
     height: 60px;
     width: 60px;
@@ -203,15 +213,6 @@ section {
     position: relative;
   }
 
-  .leftNav_bg {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background-color: white;
-    opacity: .25;
-    box-shadow: 0px 0px 5px $bg-light;
-  }
-
   .headshot_wrap {
     height: 85%;
     width: 85%;
@@ -220,10 +221,10 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 10;
 
     .headshot {
-      transform: translateY(10%);
-      height: 150%;
+      height: 100%;
     }
   }
 }
@@ -376,6 +377,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 5px;
     box-shadow: 0px 0px 5px -2px grey;
     margin-right: 20px;
   }
